fix wordwrap
[#66075046] a little half-assed. Need to completely redo this markup.
But that can happen later.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -643,7 +643,10 @@ i[class*="icon"] {font-style: normal;}
 	}
 	h2 { margin: {top:8px;bottom:0;}}
 	i[class*="icon"], strong { margin-right: 5px;}
-	.user-info li { margin-bottom: 3px;}
+	.user-info {
+		width: 66%;
+		li { margin-bottom: 3px;}
+	}
 }
 
 .map-wrapper, .carousel-wrapper, .module-large, .results-item, .back-to-top {@include box-shadow(0 1px 2px hsla(0,0%,0%,0.07));}
